--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,29 @@
 {
   "name": "@docsearchengine/backend",
   "private": true,
-  "version": "0.0.0"
+  "version": "0.1.0",
+  "scripts": {
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/server.js",
+    "typecheck": "tsc -p tsconfig.json --noEmit"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.7",
+    "@types/node": "^20.12.12",
+    "tsc-alias": "^1.8.10",
+    "tslib": "^2.6.2",
+    "tsx": "^4.15.7",
+    "typescript": "^5.4.5"
+  }
 }
