--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js",
-    "typecheck": "tsc -p tsconfig.json --noEmit"
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "migrate:up": "tsx src/db/migrate.ts up",
+    "migrate:down": "tsx src/db/migrate.ts down"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -14,6 +16,7 @@
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
+    "pg": "^8.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -21,6 +24,7 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.12.12",
+    "@types/pg": "^8.11.6",
     "tsc-alias": "^1.8.10",
     "tslib": "^2.6.2",
     "tsx": "^4.15.7",
