Add authentication utilities and routes

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=4000
-# Local Docker Postgres
 DATABASE_URL=postgres://docsearch:docsearch@localhost:5432/docsearch
+JWT_SECRET=replace-with-a-long-random-string
