--- a/backend/package.json
+++ b/backend/package.json
@@ -18,14 +18,15 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "pdfjs-dist": "^4.8.69",
     "pg": "^8.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.12",
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.12.12",
     "@types/pg": "^8.11.6",
