--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,5 @@ NODE_ENV=development
 PORT=4000
 DATABASE_URL=postgres://docsearch:docsearch@localhost:5432/docsearch
 JWT_SECRET=replace-with-a-long-random-string
+# For future: change dictionary used in migrations / queries (default: english)
+SEARCH_TEXT_CONFIG=english
