--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,13 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json && shx cp -r src/migrations dist/migrations",
     "start": "node dist/server.js",
+    "start:prod": "node dist/server.js",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "migrate:up": "tsx src/db/migrate.ts up",
-    "migrate:down": "tsx src/db/migrate.ts down"
+    "migrate:down": "tsx src/db/migrate.ts down",
+    "migrate:prod": "node dist/db/migrate.js up"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -30,6 +32,7 @@
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.12.12",
     "@types/pg": "^8.11.6",
+    "shx": "^0.3.4",
     "tsc-alias": "^1.8.10",
     "tslib": "^2.6.2",
     "tsx": "^4.15.7",
