install npm and npm fund

--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "docsearchengine",
   "private": true,
-  "workspaces": ["frontend", "backend"],
+  "workspaces": [
+    "frontend",
+    "backend"
+  ],
   "engines": {
     "node": ">=18.17"
   },
   "scripts": {
     "prepare": "git config core.autocrlf input || true"
+  },
+  "dependencies": {
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10"
   }
 }
