--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,9 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc -p tsconfig.json && shx cp -r src/migrations dist/migrations",
     "start": "node dist/server.js",
-    "start:prod": "node dist/server.js",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "migrate:up": "tsx src/db/migrate.ts up",
-    "migrate:down": "tsx src/db/migrate.ts down",
-    "migrate:prod": "node dist/db/migrate.js up"
+    "migrate:down": "tsx src/db/migrate.ts down"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
