--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,21 +1,14 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["ES2020"],
     "module": "CommonJS",
     "moduleResolution": "Node",
     "strict": true,
-    "noImplicitOverride": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "rootDir": "src",
-    "outDir": "dist",
     "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    }
+    "paths": { "@/*": ["src/*"] },
+    "types": ["node"]
   },
-  "include": ["src"]
+  "include": ["src", "src/types/**/*.d.ts"]
 }
