--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,13 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json && shx cp -r src/migrations dist/migrations",
+    "build": "tsc -p ./tsconfig.json && tsc-alias -p ./tsconfig.json && shx cp -r src/migrations dist/migrations",
     "start": "node dist/server.js",
-    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "start:prod": "node dist/server.js",
+    "typecheck": "tsc -p ./tsconfig.json --noEmit",
     "migrate:up": "tsx src/db/migrate.ts up",
-    "migrate:down": "tsx src/db/migrate.ts down"
+    "migrate:down": "tsx src/db/migrate.ts down",
+    "migrate:prod": "node dist/db/migrate.js up"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
