--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,6 +3,8 @@
     "target": "ES2020",
     "module": "CommonJS",
     "moduleResolution": "Node",
+    "outDir": "./dist",
+    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
