--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,23 +13,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Use Node 20
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '20'
 
-      - name: Install (backend)
-        working-directory: backend
-        run: npm ci
+      - name: Install & Build (root orchestrates both)
+        run: |
+          npm ci
+          npm run build
 
-      - name: Build (backend)
-        working-directory: backend
-        run: npm run build
-
-      # optional: upload dist as artifact for deploy
-      - name: Upload artifact
-        if: success()
-        uses: actions/upload-artifact@v4
+      - name: Deploy to Azure Web App
+        if: github.event_name == 'push'
+        uses: azure/webapps-deploy@v2
         with:
-          name: backend-dist
-          path: backend/dist
+          app-name: DocSearchEngine
+          package: .
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
