--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
+    "build": "tsc -p tsconfig.json && shx cp -r src/migrations dist/migrations",
     "start": "node dist/server.js",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "migrate:up": "tsx src/db/migrate.ts up",
@@ -26,7 +26,6 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.12",
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.12.12",
