--- a/package.json
+++ b/package.json
@@ -1,10 +1,36 @@
 {
   "name": "docsearchengine",
   "private": true,
-  "engines": { "node": ">=18" },
+  "workspaces": [
+    "frontend",
+    "backend"
+  ],
+  "engines": {
+    "node": ">=18.17"
+  },
   "scripts": {
-    "build": "npm --prefix backend ci && npm --prefix frontend ci && npm --prefix backend run build && npm --prefix frontend run build && node ./scripts/move-ui.mjs",
-    "start": "node backend/dist/server.js",
-    "postinstall": "npm --prefix backend install && npm --prefix frontend install"
+    "prepare": "git config core.autocrlf input || true"
+  },
+  "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
+    "bcrypt": "^6.0.0",
+    "clsx": "^2.1.1",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "motion": "^12.23.22",
+    "pdfjs-dist": "^4.10.38",
+    "pg": "^8.16.3",
+    "zod": "^4.1.12"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.7.1",
+    "@vitejs/plugin-react": "^5.0.4",
+    "tailwindcss": "^4.1.14",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
