Add backend static hosting pipeline

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,7 +8,8 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": { "@/*": ["src/*"] },
-    "types": ["node"]
+    "types": ["node"],
+    "outDir": "./dist"
   },
   "include": ["src", "src/types/**/*.d.ts"]
 }
