--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "version": "0.1.0",
   "scripts": {
+    "ci": "npm ci",
     "dev": "tsx watch src/server.ts",
-    "build": "tsc -p tsconfig.json && shx cp -r src/migrations dist/migrations",
+    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json && shx cp -r src/migrations dist/migrations",
     "start": "node dist/server.js",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "migrate:up": "tsx src/db/migrate.ts up",
