--- a/backend/package.json
+++ b/backend/package.json
@@ -29,12 +29,13 @@
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.12",
     "@types/morgan": "^1.9.7",
-    "@types/node": "^20.12.12",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.11.30",
     "@types/pg": "^8.11.6",
     "shx": "^0.3.4",
     "tsc-alias": "^1.8.10",
     "tslib": "^2.6.2",
     "tsx": "^4.15.7",
-    "typescript": "^5.4.5"
+    "typescript": "^5.6.0"
   }
 }
