ci: add azure deployment workflow

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,32 +1,22 @@
 {
   "name": "@docsearchengine/frontend",
   "private": true,
-  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview --port 5173"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.5",
-    "axios": "^1.7.2",
-    "clsx": "file:vendor/clsx",
-    "pdfjs-dist": "^4.10.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1",
-    "zod": "^3.23.8"
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.4",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^5.0.4",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2",
-    "vite": "^5.4.6",
-    "@tailwindcss/forms": "file:vendor/@tailwindcss/forms"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "vite": "^5.4.8",
+    "@vitejs/plugin-react": "^5.1.0"
   }
 }
