--- a/backend/package.json
+++ b/backend/package.json
@@ -1,41 +1,34 @@
 {
   "name": "@docsearchengine/backend",
   "private": true,
-  "version": "0.1.0",
+  "type": "module",
+  "engines": { "node": ">=20" },
   "scripts": {
-    "ci": "npm ci",
-    "dev": "tsx watch src/server.ts",
     "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json && shx cp -r src/migrations dist/migrations",
     "start": "node dist/server.js",
-    "typecheck": "tsc -p tsconfig.json --noEmit",
-    "migrate:up": "tsx src/db/migrate.ts up",
-    "migrate:down": "tsx src/db/migrate.ts down"
+    "dev": "nodemon --watch src --exec \"ts-node src/server.ts\""
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.5",
     "pdfjs-dist": "3.11.174",
-    "pg": "^8.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
-    "@types/multer": "^1.4.12",
-    "@types/morgan": "^1.9.7",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
-    "@types/pg": "^8.11.6",
+    "nodemon": "^3.0.1",
     "shx": "^0.3.4",
+    "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
-    "tslib": "^2.6.2",
-    "tsx": "^4.15.7",
-    "typescript": "^5.6.0"
+    "typescript": "^5.6.2"
   }
 }
