--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,15 +1,19 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
-    "moduleResolution": "Node",
-    "strict": true,
+    "target": "ES2022",
+    "module": "Node16",
+    "moduleResolution": "Node16",
+    "rootDir": "src",
+    "outDir": "dist",
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./*.ts", "./*/index.ts"]
+    },
+    "typeRoots": ["./node_modules/@types", "./src/types"],
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "baseUrl": ".",
-    "paths": { "@/*": ["src/*"] },
-    "types": ["node"],
-    "outDir": "./dist"
+    "resolveJsonModule": true,
+    "sourceMap": false
   },
-  "include": ["src", "src/types/**/*.d.ts"]
+  "include": ["src"]
 }
