--- a/package.json
+++ b/package.json
@@ -1,38 +1,10 @@
 {
   "name": "docsearchengine",
   "private": true,
-  "workspaces": [
-    "frontend",
-    "backend"
-  ],
-  "engines": {
-    "node": ">=20"
-  },
+  "workspaces": ["backend", "frontend"],
+  "engines": { "node": ">=20" },
   "scripts": {
-    "prepare": "git config core.autocrlf input || true",
-    "build": "npm --prefix frontend install --include=dev --no-audit --no-fund && npm --prefix frontend run build && npm --prefix backend install --include=dev --no-audit --no-fund && npm --prefix backend run build && node -e \"fs=require('fs');p='backend/dist/public';fs.mkdirSync(p,{recursive:true});fs.cpSync('frontend/dist',p,{recursive:true});\"",
-    "start": "node backend/dist/server.js"
-  },
-  "dependencies": {
-    "@headlessui/react": "^2.2.9",
-    "@heroicons/react": "^2.2.0",
-    "bcrypt": "^6.0.0",
-    "clsx": "^2.1.1",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "motion": "^12.23.22",
-    "pdfjs-dist": "^4.10.38",
-    "pg": "^8.16.3",
-    "zod": "^4.1.12"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^6.0.0",
-    "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.7.1",
-    "@vitejs/plugin-react": "^5.0.4",
-    "tailwindcss": "^4.1.14",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "build": "npm --prefix frontend ci && npm --prefix frontend run build && npm --prefix backend ci && npm --prefix backend run build && node -e \"fs=require('fs');p='backend/dist/public';fs.mkdirSync(p,{recursive:true});fs.cpSync('frontend/dist',p,{recursive:true});\"",
+    "start": "npm --prefix backend start"
   }
 }
