--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,10 @@
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
-    "typescript": "^5.6.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "vite": "^5.4.8",
-    "@vitejs/plugin-react": "^5.1.0"
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.8"
   }
 }
