--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vite-tsconfig-paths": "^4.3.2"
   }
 }
