--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,6 +9,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "types": ["vite/client"],
+    "typeRoots": ["./node_modules/@types", "../node_modules/@types"],
     "noEmit": true,
     "baseUrl": ".",
     "paths": {
