--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -23,17 +23,18 @@ jobs:
       - name: Harden npm downloads
         run: |
           npm config set registry https://registry.npmjs.org/
-          npm config set prefer-online true
           npm config set fetch-retries 5
-          npm config set fetch-retry-mintimeout 20000
+          npm config set fetch-retry-factor 2
           npm config set fetch-retry-maxtimeout 120000
+          npm config set fetch-timeout 120000
+          npm config set prefer-online true
           npm cache clean --force
 
       - name: Use runner temp npm cache
         run: npm config set cache "${{ runner.temp }}/.npm"
 
       - name: Install (workspaces)
-        run: npm ci --workspaces --include-workspace-root
+        run: npm ci --workspaces --include-workspace-root --no-audit --no-fund
 
       # Frontend
       - run: npm run build
