--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
-    "pdfjs-dist": "3.11.174",
+    "pdfjs-dist": "^4.10.38",
     "zod": "^3.23.8"
   },
   "devDependencies": {
