frontend: runtime same-origin API (remove localhost fallback); clarify VITE usage

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,2 @@
-VITE_API_URL=http://localhost:4000
+# For local dev ONLY (Azure prod uses same-origin; leave unset in prod)
+# VITE_API_URL=http://localhost:4000
