--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,4 @@
 # For local dev ONLY (Azure prod uses same-origin; leave unset in prod)
+# Frontend calls the same origin by default.
+# Uncomment for local dev only:
 # VITE_API_URL=http://localhost:4000
