--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,5 +2,9 @@ NODE_ENV=development
 PORT=4000
 DATABASE_URL=postgres://docsearch:docsearch@localhost:5432/docsearch
 JWT_SECRET=replace-with-a-long-random-string
+# Optional runtime toggles
+# ALLOWED_ORIGINS=https://example.com
+# APP_NAME=DocSearchEngine
+# LOG_LEVEL=silent
 # For future: change dictionary used in migrations / queries (default: english)
 SEARCH_TEXT_CONFIG=english
