--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -1,86 +1,32 @@
-name: Build & Deploy - DocSearchEngine
+name: Deploy (Azure builds from source)
 
 on:
   push:
     branches: [ main ]
   workflow_dispatch:
 
-permissions:
-  id-token: write
-  contents: read
-
-env:
-  NODE_VERSION: 20
-
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Use Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-
-      - name: Harden npm downloads
-        run: |
-          npm config set registry https://registry.npmjs.org/
-          npm config set fetch-retries 5
-          npm config set fetch-retry-factor 2
-          npm config set fetch-retry-maxtimeout 120000
-          npm config set fetch-timeout 120000
-          npm config set prefer-online true
-          npm cache clean --force
-
-      - name: Use runner temp npm cache
-        run: npm config set cache "${{ runner.temp }}/.npm"
-
-      - name: Install (workspaces)
-        run: npm ci --workspaces --include-workspace-root --no-audit --no-fund
-
-      # Frontend
-      - run: npm run build
-        working-directory: frontend
-
-      # Backend
-      - run: npm run build
-        working-directory: backend
-
-      # Copy UI into backend/dist/public
-      - run: |
-          mkdir -p backend/dist/public
-          cp -r frontend/dist/* backend/dist/public/
-
-      # Zip backend only (faster deploy)
-      - run: |
-          cd backend
-          zip -r ../backend.zip .
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: backend-zip
-          path: backend.zip
-
   deploy:
     runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: backend-zip
-          path: .
 
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      # DO NOT CHANGE the three lines below. Paste your existing values exactly.
       - name: Login to Azure
         uses: azure/login@v2
         with:
+          # <— keep exactly as in your file
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_449C2286F0BB4D8C87DDDFD5D1F23817 }}
+          # <— keep exactly as in your file
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B973AA95BDDB4C49A6975085CA622576 }}
+          # <— keep exactly as in your file
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_08053C01490A49349B359E2FE8EA0628 }}
 
+      # Ship the repo as-is. Azure Oryx will install, build and start the app using your App Settings.
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: DocSearchEngine
-          package: backend.zip
+          package: .
