--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,19 +1,14 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "Node16",
-    "moduleResolution": "Node16",
-    "rootDir": "src",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "outDir": "dist",
-    "baseUrl": "./src",
-    "paths": {
-      "@/*": ["./*.ts", "./*/index.ts"]
-    },
-    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "rootDir": "src",
+    "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
     "resolveJsonModule": true,
-    "sourceMap": false
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
