--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,2 @@
-# For local dev ONLY (Azure prod uses same-origin; leave unset in prod)
-# Frontend calls the same origin by default.
-# Uncomment for local dev only:
+# For local dev only; leave unset in prod (same-origin)
 # VITE_API_URL=http://localhost:4000
