--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon --watch src --exec \"ts-node src/server.ts\""
   },
   "dependencies": {
+    "express-session": "^1.17.3",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/express-session": "^1.17.10",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
