Use same-origin axios client and serve frontend

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,3 @@
 # For local dev only; leave unset in prod (same-origin)
-# VITE_API_URL=http://localhost:4000
-# (Default backend port is 8080.)
+# No API URL override is required; the frontend uses relative paths.
+# (Default backend port is 8080 when running separately.)
