docs/build: remove Vite dev-server/proxy; clarify same-origin like proxy

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,1 @@
-# For local dev only; leave unset in prod (same-origin)
-# No API URL override is required; the frontend uses relative paths.
-# (Default backend port is 8080 when running separately.)
+# Not used. The frontend calls the backend via same-origin paths.
