--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,9 @@
 NODE_ENV=development
 PORT=4000
 DATABASE_URL=postgres://docsearch:docsearch@localhost:5432/docsearch
-JWT_SECRET=replace-with-a-long-random-string
+ADMIN_USER=admin@example.com
+ADMIN_PASS=change_me
+SESSION_SECRET=please_change_me
 # Optional runtime toggles
 # ALLOWED_ORIGINS=https://example.com
 # APP_NAME=DocSearchEngine
