Prepare deployment assets and workflow

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": { "node": ">=18" },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc -p tsconfig.json && node ./scripts/build-css.mjs",
+    "build": "tsc -p tsconfig.json && node ./scripts/build-css.mjs && node ./scripts/copy-public.mjs",
     "start": "node dist/server.js",
     "migrate:up": "psql \"$DATABASE_URL\" -f migrations/001_init.sql"
   },
