ci(prod): backend-only deploy (zip + OIDC)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,20 +15,22 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
+          cache-dependency-path: backend/package-lock.json
 
-      # Install runtime deps so node_modules is included in the zip
+      # Use the lockfile you just committed. If you see EUSAGE again,
+      # it means the lockfile didn't get committed or changed without update.
       - name: Install backend (prod only)
-        run: |
-          cd backend
-          npm ci --omit=dev
+        working-directory: backend
+        run: npm ci --omit=dev
 
       - name: Zip backend
         run: |
           cd backend
-          zip -r ../backend.zip .
+          zip -r ../backend.zip package.json package-lock.json server.js public node_modules
           cd ..
 
-      # ---- DO NOT REMOVE ----
+      # ---- DO NOT REMOVE THIS BLOCK ----
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -36,7 +38,7 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B973AA95BDDB4C49A6975085CA622576 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_08053C01490A49349B359E2FE8EA0628 }}
 
-      - name: Deploy to Azure Web App (prod)
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: docsearchengine-amd3dvf7hch0cnax
