--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,13 @@
   "engines": { "node": ">=20" },
   "scripts": {
     "start": "node server.js",
-    "dev": "node --watch server.js",
-    "health": "node -e \"require('./server.js')\""
+    "dev": "node --watch server.js"
   },
   "dependencies": {
-    "compression": "^1.7.4",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0"
+    "express": "^4.21.2",
+    "helmet": "^7.2.0",
+    "morgan": "^1.10.1"
   }
 }
