--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,8 +43,26 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B973AA95BDDB4C49A6975085CA622576 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_08053C01490A49349B359E2FE8EA0628 }}
 
-      - name: Deploy to Azure Web App (prod)
+      - name: Sanity: show subscription and find the app
+        run: |
+          echo "== Subscription in use =="
+          az account show --query "{id:id, name:name}" -o tsv
+          echo "== Search for webapp =="
+          az webapp list --query "[?name=='docsearchengine-amd3dvf7hch0cnax'].[name,resourceGroup,location,id]" -o tsv
+
+      - name: Deploy to Azure Web App (OIDC)
+        id: deploy_oidc
+        continue-on-error: true
         uses: azure/webapps-deploy@v3
         with:
           app-name: docsearchengine-amd3dvf7hch0cnax
           package: backend.zip
+
+      # Fallback: use publish profile if OIDC didn't succeed
+      - name: Deploy with Publish Profile (fallback)
+        if: steps.deploy_oidc.outcome != 'success'
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: docsearchengine-amd3dvf7hch0cnax
+          package: backend.zip
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISH_PROFILE }}
