--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,10 +2,11 @@ name: deploy (prod)
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   workflow_dispatch:
 
-# REQUIRED for azure/login OIDC
+# REQUIRED for OIDC
 permissions:
   id-token: write
   contents: read
@@ -15,19 +16,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Use Node 20
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '20'
           cache: 'npm'
           cache-dependency-path: backend/package-lock.json
 
       - name: Install backend (prod only)
         working-directory: backend
-        run: npm ci --omit=dev
-        # If you ever hit CI lockfile errors again, use this instead:
-        # run: npm ci --omit=dev || npm install --omit=dev --no-audit --no-fund
+        run: |
+          npm ci --omit=dev || npm install --omit=dev --no-audit --no-fund
 
       - name: Zip backend
         run: |
@@ -35,7 +37,7 @@ jobs:
           zip -r ../backend.zip package.json package-lock.json server.js public node_modules
           cd ..
 
-      # ---- DO NOT REMOVE ----
+      # ---- DO NOT REMOVE (your OIDC secrets) ----
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -58,9 +60,9 @@ jobs:
           app-name: docsearchengine-amd3dvf7hch0cnax
           package: backend.zip
 
-      # Fallback: use publish profile if OIDC didn't succeed
+      # Fallback only if OIDC deploy didn't succeed AND publish profile exists
       - name: Deploy with Publish Profile (fallback)
-        if: steps.deploy_oidc.outcome != 'success'
+        if: ${{ steps.deploy_oidc.outcome != 'success' && secrets.AZUREAPPSERVICE_PUBLISH_PROFILE != '' }}
         uses: azure/webapps-deploy@v3
         with:
           app-name: docsearchengine-amd3dvf7hch0cnax
