--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,13 @@
   "type": "module",
   "engines": { "node": ">=20" },
   "scripts": {
-    "start": "node server.js",
-    "dev": "node --watch server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "compression": "^1.8.1",
-    "cors": "^2.8.5",
     "express": "^4.21.2",
+    "compression": "^1.8.1",
     "helmet": "^7.2.0",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "cors": "^2.8.5"
   }
 }
