--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "helmet": "^7.2.0",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
