--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,15 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "helmet": "^7.2.0",
     "morgan": "^1.10.1",
+    "multer": "^1.4.5-lts.2",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.16.3"
   },
   "devDependencies": {
