--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,37 +12,37 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Use Node 20
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '20'
 
-      # Install runtime deps inside backend (prod only) using its lockfile
+      # Install ONLY backend prod deps
       - name: Install backend (prod only)
-        run: |
-          cd backend
-          npm install --omit=dev --no-audit --no-fund
+        working-directory: backend
+        run: npm install --omit=dev --no-audit --no-fund
 
-      # Zip the backend folder so package.json is at the zip root (like Proxy)
+      # Zip the backend folder so package.json is at the zip root
       - name: Zip backend
         run: |
           cd backend
-          zip -r ../backend.zip .
+          zip -r ../backend.zip package.json package-lock.json server.js public node_modules
+          cd ..
 
-      # ---- DO NOT REMOVE (Azure OIDC secrets) ----
-      - name: Login to Azure
+      # Azure login via OIDC (keep your existing secrets)
+      - name: Azure login
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_449C2286F0BB4D8C87DDDFD5D1F23817 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B973AA95BDDB4C49A6975085CA622576 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_08053C01490A49349B359E2FE8EA0628 }}
 
+      # Deploy JUST the backend zip
       - name: Deploy to Azure Web App (prod)
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'DocSearchEngine'      # App Service resource name (use the same value as Proxy uses)
-          slot-name: 'Production'
+          app-name: docsearchengine-amd3dvf7hch0cnax
           package: backend.zip
