--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -51,28 +51,7 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_08053C01490A49349B359E2FE8EA0628 }}
 
       - name: Deploy to Azure Web App (prod)
-        env:
-          AZURE_WEBAPP_NAME: docsearchengine-amd3dvf7hch0cnax
-          DEPLOY_PACKAGE: backend.zip
-        run: |
-          set -euo pipefail
-
-          if [ ! -f "$DEPLOY_PACKAGE" ]; then
-            echo "::error::Expected deployment package '$DEPLOY_PACKAGE' was not generated"
-            exit 1
-          fi
-
-          RESOURCE_GROUP=$(az webapp list \
-            --query "[?name=='${AZURE_WEBAPP_NAME}'].resourceGroup" \
-            -o tsv)
-
-          if [ -z "$RESOURCE_GROUP" ]; then
-            echo "::error::Unable to determine resource group for app '$AZURE_WEBAPP_NAME'"
-            exit 1
-          fi
-
-          az webapp deploy \
-            --name "$AZURE_WEBAPP_NAME" \
-            --resource-group "$RESOURCE_GROUP" \
-            --src-path "$DEPLOY_PACKAGE" \
-            --type zip
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: docsearchengine-amd3dvf7hch0cnax
+          package: backend.zip
