--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,5 +44,5 @@ jobs:
       - name: Deploy to Azure Web App (prod)
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'DocSearchEngine'
+          app-name: docsearchengine-amd3dvf7hch0cnax
           package: backend.zip
